# CKM

./: README.md  config.json  eval.py  pyproject.toml  requirements.txt
CKM/peft/tuners/: clitmoelora.py
llava/eval/: eval_deepseek_r1.py  eval_textvqa.py  eval_vizwiz.py  model_answer.py  model_others.py  model_science_qa.py
llava/model/: builder.py  llava_arch.py  task_anchor.py
llava/model/language_model/: llava_llama.py
llava/train/: train_MOE.py
scripts/HiDe/Eval_UCIT/: Eval_all.sh  Eval_finetune2.sh  eval_arxivqa.sh  eval_clevr.sh  eval_flickr30k.sh  eval_iconqa.sh  eval_imagenet.sh  eval_vizwiz.sh
scripts/HiDe/Train_UCIT/: Task1.sh  Task2.sh  Task3.sh  Task4.sh  Task5.sh  Task6.sh  train_all.sh
